# PROJEKT-SO---FABRYKA

./: README.md  Raport projektu „Fabryka”.c  WRONA_KAMIL_146886_opis_FABRYKA.md
Fabryka/: CMakeLists.txt  dostawca.c  dostawca.h  dyrektor.c  dyrektor.h  fabryka  kolejka_komunikatow.c  kolejka_komunikatow.h  main.c  monter.c  monter.h  pamiec_dzielona.c  pamiec_dzielona.h  semafor.c  semafor.h  stan_magazynu.txt
